# noctra-browser

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic.py  console.py  cookies.py  evaluate.py  network.py  screenshot.py  stealth.py
noctra_browser/: __init__.py
noctra_browser/browser/: __init__.py  browser.py  context.py  launcher.py  target.py
noctra_browser/cdp/: __init__.py  client.py  domains.py  errors.py  session.py  types.py
noctra_browser/cookies/: __init__.py  manager.py  models.py
noctra_browser/input/: __init__.py  keyboard.py  mouse.py
noctra_browser/network/: __init__.py  events.py  manager.py  models.py
noctra_browser/page/: __init__.py  element.py  frame.py  lifecycle.py  locator.py  page.py
noctra_browser/runtime/: __init__.py  evaluator.py  serialization.py
noctra_browser/screenshot/: __init__.py  service.py
noctra_browser/selectors/: __init__.py  engine.py  models.py
noctra_browser/stealth/: __init__.py  config.py  evasions.py  manager.py
noctra_browser/types/: __init__.py  internal.py  public.py
noctra_browser/utils/: __init__.py  async_utils.py  errors.py  events.py  json.py  paths.py  ports.py  process.py
tests/: test_browser_smoke.py  test_cdp_client.py  test_cookies.py  test_evaluator.py  test_event_emitter.py  test_launcher.py  test_page_behavior.py  test_public_api.py  test_selector_engine.py  test_stealth.py  test_timeout.py
