[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "noctra-browser"
version = "0.1.0"
description = "Async Python browser automation framework powered by Chrome DevTools Protocol."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Noctra Browser Contributors" }
]
keywords = ["browser", "automation", "cdp", "asyncio", "chromium"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Framework :: AsyncIO",
]
dependencies = [
  "httpx>=0.26,<1",
  "websockets>=12,<16",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "mypy>=1.8",
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
  "twine>=5",
]

[project.urls]
Homepage = "https://github.com/EmirhanErsonmez/noctra-browser"
Issues = "https://github.com/EmirhanErsonmez/noctra-browser/issues"

[tool.setuptools.packages.find]
include = ["noctra_browser*"]

[tool.setuptools.package-data]
noctra_browser = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "T20", "RUF"]
ignore = ["ASYNC109"]

[tool.ruff.lint.per-file-ignores]
"examples/*.py" = ["T201"]
"noctra_browser/stealth/evasions.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = ["websockets.*"]
ignore_missing_imports = true
